# chess

./: CMakeLists.txt  ChessGUI.cpp  ChessGUI.h  ChessPiece.cpp  ChessPiece.h  README.md  SchaakGUI.cpp  SchaakGUI.h  SchaakStuk.cpp  SchaakStuk.h  game.cpp  game.h  main.cpp
guicode/: ChessWindow.cpp  ChessWindow.h  fileIO.cpp  fileIO.h  message.cpp  message.h  resources.h
